--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,10 +1,10 @@
 {
   "version": "1.0",
   "id": "/",
-  "name": "My Blog",
-  "short_name": "My Blog",
-  "description": "My blog description goes here...",
-  "start_url": "https://my-blog.blogspot.com/?utm_source=homescreen",
+  "name": "THE LINGKON",
+  "short_name": "LINGKON",
+  "description": "জেনে রাখুন আদ্যোপান্ত",
+  "start_url": "https://thelingkon.blogspot.com/",
   "dir": "auto",
   "lang": "en-US",
   "orientation": "any",
@@ -95,10 +95,10 @@
   ],
   "shortcuts": [
     {
-      "name": "My Shortcut 1",
-      "short_name": "My Shortcut 1",
-      "description": "My Shortcut 1 description goes here...",
-      "url": "https://my-blog.blogspot.com/search/label/my-shortcut-1?utm_source=homescreen",
+      "name": "THE LINGKON",
+      "short_name": "LINGKON",
+      "description": "জেনে রাখুন আদ্যোপান্ত",
+      "url": "https://thelingkon.blogspot.com/",
       "icons": [
         {
           "src": "icons/android-icon-96x96.png",
@@ -107,10 +107,10 @@
       ]
     },
     {
-      "name": "My Shortcut 2",
-      "short_name": "My Shortcut 2",
-      "description": "My Shortcut 2 description goes here...",
-      "url": "https://my-blog.blogspot.com/search/label/my-shortcut-2?utm_source=homescreen",
+      "name": "The Lingkon",
+      "short_name": "LINGKON",
+      "description": "চলো বহুদূর..",
+      "url": "https://thelingkon.blogspot.com/",
       "icons": [
         {
           "src": "icons/android-icon-96x96.png",
