--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,7 +4,7 @@
   "name": "The Lingkon",
   "short_name": "LINGKON",
   "description": "রহস্য রোমাঞ্চ আদ্যোপান্ত",
-  "start_url": "https://thelingkon.blogspot.com/?utm_source=homescreen",
+  "start_url": "https://thelingkon.blogspot.com/",
   "dir": "auto",
   "lang": "en-US",
   "orientation": "any",
